--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,4 @@
-<h1>Lista de posts</h1>
+<h1>Lista de Anotações</h1>
 
 {{#each posts}}
 <hr>
@@ -13,6 +13,6 @@
 
 {{/each}}
 <a href="/cad"><button style="background-color:green">
-Adicionar Post
+Adicionar Nota
 </button>
 </a>
